# VizDebug

./: LICENSE.md  README.md  pyproject.toml
plugins/: gdb.py  python_plugin.py
src/VizDebug/: __main__.py  main_window.py  var_server.py
