[project]
name = "viz-debug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "orjson>=3.11.7",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.1",
    "types-gdb>=16.3.0.20260109",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "VizDebug"
